@startuml
'https://plantuml.com/class-diagram



class ProductSearchParser{
    + {static} JsonObject fileParse(String Input)
    + {static} JsonObject IterateArray(JsonArray subjects, String Input)
    Object obj
    JsonObject objects
    JsonArray subjects
    String input
    JsonObject individual
}

class ProductSearchBase{
    + {static} void main()
    + {static} String Input()
    + {static} JsonObject Conditional(JsonObject Found)
    String UserInput
    JsonObject Found

}

class ProductSearchOutput{
    void output(JsonObject Found)
}
ProductSearchBase <|-- ProductSearchParser
ProductSearchBase <|-- ProductSearchOutput

@enduml